complete/data/corpus/corpus2445093.txt
Question (ID-2445093): Python beginner having trouble running code For some reason this code will not seem to run in the interpreter. When I hit F5 nothing happens, not even the debugger seems to recognize it. I assume it has something to do with the class, as when removed the interpreter seems to recognize the rest of the code. Please tell me what I am doing wrong.
Edit: I have restarted the interpreter multiple times, any other piece of code I try to load runs fine, just this one is having trouble. 

 edit: removed the initial print statement
edit: fixed the indentation in the post code.
edit: I have updated the code with fixes mentioned in the comments below; however, idle still does nothing when I try and run the code. I am using python 3.1.1 by the way. 

 class sorting_class:
 def __init__(self):
  self.globali = 0
  self.order = ['a', 'b', 'c', 'd']
  self.orderi = 0
  self.sortedlist = []
 def sort(self, array):
  carry, leave = []
  for arrayi in array:
   print ('run', arrayi)
   if self.order[self.orderi] == arrayi[self.globali]:
    carry.append(arrayi)
   else:
    if self.globali != 0:
     leave.append(arrayi)
  return carry, leave
 def srt(self, array):
  globalii = 0
  carry, leave = my.sort(array)
  while len(self.sortedlist) != len(array):
   if len(carry) == 1:
    self.sortedlist.append(carry)
    arrayt = leave
    self.globali = 1
    self.orderi = 0
    carry, leave = my.sort(arrayt)
   elif len(carry) == 0:
    if len(leave) != 0:
     arrayt = leave
     self.globali = 1
     self.orderi = 1
     my.sort(arrayt)
    else:
     self.arrayt 
     globalii += 1
     self.orderi = globalii
     self.globali = 0
     my.sort(arrayt)
     self.orderi = 0
   else:
    arrayt = carry
    carry = []
    self.globali += 1
    carry, leave += my.sort(arrayt)
my = sorting_class()
x = ['ac', 'bc' ,'ab', 'da']
prin = my.srt(x)
print (prin)
 
 Answers (Total-8): #0 The source highlighting should give you a hint. You either need to switch to double quotes, or escape the ' in won't . 

 Change 

 print ('Why won't this work?') 
 

 to 

 print ('Why won\'t this work?') 
 
 #1 I got the following error message when running your code: 

 File "sss.py", line 44
 carry, leave += my.sort(arrayt)
SyntaxError: illegal expression for augmented assignment
 

 You should get similar error messages too. BTW, I am using python 2.6.4 for testing. 
 #2 I wonder if you're just having trouble working with IDLE. You mentioned elsewhere that the debugger just says "None". When I select "Debugger" from the IDLE interpreter window Debug menu, it pops up another window with the title "Debug Control", and it says "None" in that window. 

 That window is just a control panel. You still have to run the program, by choosing "Run" from the "Run" menu of the window that has your code in it. That will make something appear in the "Debug Control" window, and it will un-gray the buttons in that window ("Go", "Step", and so on) so you can actually use the debugger to run or step through your program. 

 

 When I cut &amp; paste your code into an IDLE window and use the Run/Check Module option, it reports an illegal expression on line 44: 

     carry, leave += my.sort(arrayt)
 

 which looks pretty peculiar. The LHS is a tuple; tuples are immutable, you can't use += to modify them. Looks like you meant a plain equals sign there, since the sort method returns a tuple. 

     carry, leave = my.sort(arrayt)
 

 ETA: Ah, Stefan &amp; John are also correct. You're sometimes using the name you used for your instance variable ( my ) instead of self when calling one method of the class from inside another. 
 #3 Seems that you have a problem with your indentation 

 ...  my = sorting_class()
 File "&lt;stdin&gt;", line 45
 my = sorting_class()
      ^
IndentationError: unindent does not match any outer indentation level
&gt;&gt;&gt;  x = ['ac', 'bc' ,'ab', 'da']
 File "&lt;stdin&gt;", line 1
 x = ['ac', 'bc' ,'ab', 'da']
 ^
IndentationError: unexpected indent
&gt;&gt;&gt;  my.srt(x)
 

 once you get the indenting sorted you probably should consider having a print statement somewhere 
 #4 You're my = sorting_class() is defined inside the class. Take it out the class definition and you should be all set. 
 #5 You reference my within your class methods when they are clearly not in scope anywhere. I'm not sure what this should even be referring to. 

 Also, it's indented one level too far. 
 #6 The += instead on = at line 44 that others have mentioned 

 Then: Inside your class where you have my .sort(.....) you should have self .sort(.....) -- there are three places to fix. 

 Then it falls over on line 8: 

 carry, leave = [] 

 What Python version are you using? I note that Python 3.1 goes bananas (reports """ SystemError : invalid node type (24) for augmented assignment""" in console mode) when it hits the line 44 += thingy which may explain why you see nothing in IDLE. 

 Next problem: self.carry should be just carry in lines 21 and 26 

 There's more: 

 File "my.py", line 28, in srt
 if len(self.leave) != 0:
AttributeError: sorting_class instance has no attribute 'leave'
 

 After fixing that, it runs, printing some stuff, and then it dies again: 

 File "my.py", line 11, in sort
 if self.order[self.orderi] == arrayi[self.globali]:
IndexError: list index out of range
 

 Now we're in territory where we'd have to try to understand what you think you are supposed to be doing .... 

 Can you please answer the Python version question? It looks like there's a bug to be reported. 
 #7 There are too many errors in your code. Write down in plain English your requirements and start from scratch. 

 What are you trying to do? Is it: 

 x = ['ac', 'bc' ,'ab', 'da']
order = ['d', 'b', 'c', 'a']
assert len(order) == len(x)
x = [item for o, item in sorted(zip(order, x))]
print x
# -&gt; ['da', 'bc', 'ab', 'ac']